# neurodags

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: COMPARISON.md  conf.py  index.md
docs/examples/: plot_basic.py  plot_mermaid_visualization.py  plot_quickstart_synthetic.py
docs/user_guide/: concepts.md  custom_nodes.md  dataframe_assembly.md  datasets_yaml.md  hpc.md  index.md  inspection.md  inspection_parallelism.md  installation.md  parallelism.md  pipeline_yaml.md  quickstart.md  tui.md  usage.md
example_pipelines/: datasets_dementia.download  datasets_epilepsy.yml  datasets_epilepsy_features.yml  definitions_epilepsy.py  pipeline_epilepsy.yml  pipeline_epilepsy_features.yml  pipeline_psycho.yml
src/cocofeats/: dag.py  loaders.py  orchestrators.py  utils.py  visualization.py
src/cocofeats/features/: __init__.py  pipeline.py
src/cocofeats/nodes/: antropy.py  descriptive.py  dummy.py  factories.py  loader.py  neurokit.py  operations.py  spectral.py
src/neurodags/: __init__.py  cli.py  dag.py  datasets.py  definitions.py  iterators.py  loaders.py  loggers.py  mermaid.py  orchestrators.py  tui.py  utils.py  visualization.py  writers.py
src/neurodags/derivatives/: __init__.py  pipeline.py
src/neurodags/features/: pipeline.yml
src/neurodags/nodes/: __init__.py  antropy.py  descriptive.py  dummy.py  factories.py  loader.py  neurokit.py  operations.py  preprocessing.py  spectral.py  stats.py
tests/: conftest.py  test_antropy_nodes.py  test_bandpower.py  test_cli.py  test_dag_save_flag.py  test_datasets.py  test_descriptive_nodes.py  test_example.py  test_fooof_nodes.py  test_hdf5_netcf4.py  test_loaders.py  test_loaders_extras.py  test_loggers.py  test_mermaid.py  test_neurokit.py  test_node_loader.py  test_nodes_registry.py  test_operations_nodes.py  test_orchestrator.py  test_orchestrator_extras.py  test_pipeline_integration.py  test_preprocessing_extras.py  test_preprocessing_nodes.py  test_spectral_extras.py  test_spectral_nodes.py  test_tui.py  test_utils.py  test_visualization.py  test_xarray_factory.py  try_mermaid.py
